# ArXiv_Paper_Curator

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  compose.yml  pyproject.toml
airflow/: README.md  init-db.sql
airflow/dags/: hello_world_dag.py
notebooks/week1/: README.md  week1_setup.ipynb
src/: config.py  database.py  dependencies.py  exceptions.py  main.py  middlewares.py
src/db/: factory.py
src/db/interfaces/: base.py  postgresql.py
src/models/: __init__.py  paper.py
src/repositories/: __init__.py  paper.py
src/routers/: __init__.py  ask.py  papers.py  ping.py
src/schemas/: __init__.py  ask.py  health.py  paper.py
src/services/ollama/: __init__.py  client.py
tests/: conftest.py
tests/api/: __init__.py  conftest.py
